Tweak colors, web build

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<body style="margin: 0px;">
+<body style="margin: 0px; background-color: #76656b">
   <script type="module">
     import init from './break-free.js'
 
@@ -12,7 +12,9 @@
     });
   </script>
 
-  <canvas id="break-free-canvas" width="700" height="720"></canvas>
+  <div style="display: flex; align-items: center; justify-content: center">
+	<canvas id="break-free-canvas" width="700" height="720"></canvas>
+  </div>
 </body>
 
 </html>
